<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pretty Remote</string>
    <string name="title_connect_device">Connect to device</string>
    <string name="action_refresh">Refresh device list</string>
    <string name="button_pair">Pair with device</string>
    <string name="description_device_icon">Device icon</string>
    <string name="tv_pairing_number">Pairing number</string>
    <string name="pairing_number_hint">Pairing Number</string>
    <string name="title_pairing_dialog">Enter Pairing Key</string>
    <string name="tv_pairing_dialog_content">Enter the pairing key that is displayed on the TV to pair with the device.</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_activity_remote">RemoteActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="tv_no_devices_found">LG TV and this device need to be on the same Wi-Fi network.</string>
    <string name="button_wifi_settings">Wifi Settings</string>
    <string name="description_wifi_off_icon">Icon Wifi Off</string>
    <string name="title_no_devices_found">No devices found</string>
    <string name="toast_cannot_connect">Cannot connect to selected device.</string>
    <string name="toast_command_error">Command was rejected by device.</string>
    <string name="toast_cannot_request_pairing_key">Cannot request pairing key. Is the TV online?</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_scanning_devices">Scanning for devices</string>
    <string name="tv_channel">Channel</string>
    <string name="tv_volume">Volume</string>
    <string name="tv_touch_area">Touch Area</string>

</resources>
