<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/vg_no_devices_found"
        style="@style/NoDevicesFound">

        <TextView
            style="@style/NoWifiText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/tv_no_devices_found" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/description_wifi_off_icon"
            android:src="@drawable/ic_wifi_off" />

        <Button
            android:id="@+id/button_wifi_settings"
            style="@style/WifiSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:text="@string/button_wifi_settings" />
    </LinearLayout>

</FrameLayout>