<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DevicesActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_device_list"
        tools:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"/>

    <LinearLayout
        android:id="@+id/vg_no_devices_found"
        android:layout_centerInParent="true"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            style="@style/NoWifiText"
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tv_no_devices_found"/>
        <ImageView
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_wifi_off"
            android:contentDescription="@string/description_wifi_off_icon" />
        <Button
            style="@style/WifiSettingsButton"
            android:layout_marginTop="32dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_wifi_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_wifi_settings"/>
    </LinearLayout>


</RelativeLayout>
